--- a/src/Resources/translations/LleDashboardBundle.en.xliff
+++ b/src/Resources/translations/LleDashboardBundle.en.xliff
@@ -62,6 +62,10 @@
                 <source>widget.pdf_export</source>
                 <target>PDF export</target>
             </trans-unit>
+            <trans-unit id="stats_widgets">
+                <source>stats_widgets</source>
+                <target>Add a statistics widget</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
