--- a/src/Resources/translations/LleDashboardBundle.fr.xliff
+++ b/src/Resources/translations/LleDashboardBundle.fr.xliff
@@ -58,9 +58,9 @@
                 <source>widget.postit.title</source>
                 <target>Post-It</target>
             </trans-unit>
-            <trans-unit id="widget.pdf_export">
-                <source>widget.pdf_export</source>
-                <target>Exporter</target>
+            <trans-unit id="widget.print">
+                <source>widget.print</source>
+                <target>Imprimer</target>
             </trans-unit>
             <trans-unit id="widget.stats.title">
                 <source>widget.stats.title</source>
